# bazel

./: .bazelrc  BUILD  CHANGELOG.md  MODULE.bazel  WORKSPACE  compile.sh  distdir.bzl  distdir_deps.bzl  extensions.bzl  maven_install.json
.bazelci/: build_bazel_binaries.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: incompatible_change.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  cherry_pick.md  documentation.md  pull_request_template.md
debian/: build.sh  build_derived_java_src.sh
debian/missing-sources/mock_repos/bazel_skydoc/: setup.bzl
debian/missing-sources/mock_repos/remote_java_tools_linux/: BUILD
debian/missing-sources/mock_repos/rules_pkg/: deps.bzl  pkg.bzl
debian/patches/: WORKSPACE.patch  debian.patch  mock_repos.patch  remove_android_rules.patch  remove_grpc_api.patch  remove_javac.patch  remove_license_deps.patch  replace_grpc_java_plugin.patch
examples/cpp/: BUILD  hello-lib-macos.cc  hello-world-macos-arm64.cc  hello-world-macos-arm64e.cc  hello-world-macos-x86.cc
scripts/: BUILD  ij.bazelproject
scripts/ci/: build.sh
scripts/kokoro/linux/: release.cfg  release.sh
scripts/kokoro/macos/: release.cfg  release.sh
scripts/kokoro/release/: linux.cfg  linux.sh  macos.cfg  macos.sh  windows.bat  windows.cfg
scripts/kokoro/windows/: release.bat  release.cfg
scripts/release/: common.sh  release.sh  relnotes.sh
site/en/: _book.yaml
site/en/release/: backward-compatibility.md  index.md  rule-compatibility.md
src/: BUILD  package-bazel.sh
src/main/cpp/: blaze.cc  blaze_util_windows.cc
src/main/cpp/util/: BUILD
src/main/native/windows/: BUILD  delete.cc  file.cc
src/main/protobuf/: BUILD
src/test/py/bazel/: BUILD  (+2 more)
src/tools/android/: BUILD
src/tools/launcher/: BUILD  append_data.cc  bash_launcher.cc  bash_launcher.h  data_parser.cc  data_parser.h  java_launcher.cc  java_launcher.h  launcher.cc  launcher.h  launcher_main.cc  launcher_util.cc  launcher_util.h  python_launcher.cc  python_launcher.h  shell_launcher.cc  shell_launcher.h
src/tools/singlejar/: BUILD
tensorflow/tools/example_pip_package/: BUILD  MANIFEST.in  build_example_pip_package.sh  setup.py  swig.bat  tensorflow.bzl
tools/build_defs/repo/: BUILD  git.bzl  http.bzl  utils.bzl
tools/cpp/: CROSSTOOL  CROSSTOOL.tpl  cc_configure.bzl  windows_cc_configure.bzl
tools/distributions/: distribution_rules.bzl  system_repo.bzl
tools/distributions/debian/: debian_cc.BUILD  debian_java.BUILD  deps.bzl
(+19 files in other folders)
