module(
  name = "io_bazel",
  version = "5.0.0-pre",
  compatibility_level = "1",
)

bazel_dep(name = "com_github_grpc_grpc", version = "1.33.1")
bazel_dep(name = "com_google_protobuf", version = "3.13.0")
bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "rules_pkg", version = "0.4.0")
bazel_dep(name = "io_bazel_skydoc", version = "0.5.0-pre")

override_dep(
  name = "io_bazel_skydoc",
  override = archive_override(
    urls = ["https://github.com/meteorcloudy/stardoc/archive/558342bfb9fa9fe3f7c82549606a0b9433cde47f.tar.gz"],
    integrity = "sha256-WnJbd3l2t3qhIrcH0bbw85tgIPZs1Ce7ERpYVZnIV7E=",
    strip_prefix = "stardoc-558342bfb9fa9fe3f7c82549606a0b9433cde47f",
  )
)

#override_dep(
#  name = "io_bazel_skydoc",
#  override = local_path_override(
#    path = "",
#  )
#)
#
#override_dep(
#  name = "bazel_skylib",
#  override = single_version_override(
#    version = "1.0.2",
#  )
#)
