module(
  name = "io_bazel",
  version = "5.0.0-pre",
  compatibility_level = "1",
)

bazel_dep(name = "com_github_grpc_grpc", version = "1.33.1")
bazel_dep(name = "com_google_protobuf", version = "3.13.0")
bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "rules_pkg", version = "0.4.0")
bazel_dep(name = "io_bazel_skydoc", version = "0.5.0-pre")

override_dep(
  name = "com_google_protobuf",
  override = single_version_override(
    patches = ["//third_party/protobuf:3.13.0.patch"],
    patch_strip = 1,
  )
)
